# eocc

./: .clang-format  .gitignore  .ubsan_suppressions.txt  CMakeLists.txt  CMakePresets.json  NOTES.md  README.md  THIRD_PARTY_LICENSES.md  asan_check.sh  asan_check_macos.sh
demo/: main.cpp
demo/assets/models/: ground.glb  gun.glb  platform.glb  tower.gltf
demo/assets/models/battle_tower/: cannon.glb  platform.glb  (+1 more)
demo/assets/shaders/: basic.frag  basic.vert  depth.vert
demo/scenes/level1/: Level1.cpp  Level1.h
demo/scenes/level2/: Level2.cpp  Level2.h
demo/scenes/level3/: Level3.cpp  Level3.h
demo/scenes/menu/: Menu.cpp  Menu.h
docs/: index.html  style.css
docs/en/: index.md
docs/en/architecture/: index.md
docs/ru/: index.md
docs/ru/architecture/: index.md
include/eocc/: Engine.h
include/eocc/base/: OpenGLTypes.h
include/eocc/camera/: Camera.h
include/eocc/renderer/: Renderer.h
include/vecthar/: Engine.h
include/vecthar/base/: OpenGLTypes.h
include/vecthar/camera/: Camera.h
include/vecthar/core/: GameObject.h
include/vecthar/lighting/: DirectionalLight.h  shadow_utils.h
include/vecthar/renderer/: Renderer.h  ShadowMap.h
include/vecthar/ui/: Button.h  TextRenderer.h
src/: main.cpp
src/engine/: Engine.cpp  Engine.h
src/engine/camera/: Camera.cpp  Camera.h
src/engine/renderer/: Renderer.cpp  Renderer.h
src/eocc/: Engine.cpp
src/eocc/camera/: Camera.cpp
src/eocc/renderer/: Renderer.cpp
src/vecthar/: Engine.cpp
src/vecthar/camera/: Camera.cpp
src/vecthar/core/: GameObject.cpp
src/vecthar/lighting/: shadow_utils.cpp
src/vecthar/renderer/: Renderer.cpp  ShadowMap.cpp
src/vecthar/ui/: Button.cpp  TextRenderer.cpp
sys_shaders/ui/: text.frag  text.vert
(+69 files in other folders)
